added about section

--- a/gallup.html
+++ b/gallup.html
@@ -19,7 +19,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html#work">work</a></li>
-                    <li><a href="index.html#about">about</a></li>
+                    <li><a href="about.html">about</a></li>
                     <li><a href="playground.html">playground</a></li>
                     <li><a href="resume.pdf" target="_blank" rel="noopener">resume</a></li>
                 </ul>
@@ -44,7 +44,7 @@
         <!-- Problem -->
         <section class="case-block case-block-problem">
             <span class="case-block-label">what was the problem?</span>
-            <h2>Strengths assessment results need to make sense for any team <br>that uses the test.</h2>
+            <h2>Strengths assessment results need to make sense for any team that uses the test.</h2>
             <p>Raw scores and dense reports don’t help teams act. The goal was clear, intuitive visualizations so any group could see compatibility, trends, and gaps—and use them for team building and assessment.</p>
             <h3>Visualizations were designed to analyze compatibility at various levels.</h3>
             <div class="comparison-levels-row">
