--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <nav>
                 <ul>
                     <li><a href="#work">work</a></li>
-                    <li><a href="#about">about</a></li>
+                    <li><a href="about.html">about</a></li>
                     <li><a href="playground.html">playground</a></li>
                     <li><a href="resume.pdf" target="_blank" rel="noopener">resume</a></li>
                 </ul>
@@ -36,7 +36,9 @@
                     <p>Currently pursuing a Master's in Design @ UC Berkeley.</p>
 <br>
                     <div class="project-text">
-                        <p class="bigger">I blend visual design with systems thinking to solve complex problems. Learning fast and staying curious.</p>
+                        <p class="bigger">I blend visual design with systems thinking to solve complex problems. Learning fast and staying curious.<br>
+                            Designer, creative technologist, and aspiring weirdo.
+                        </p>
 
                        
                        
