--- a/muse.html
+++ b/muse.html
@@ -20,7 +20,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html#work">work</a></li>
-                    <li><a href="index.html#about">about</a></li>
+                    <li><a href="about.html">about</a></li>
                     <li><a href="playground.html">playground</a></li>
                     <li><a href="resume.pdf" target="_blank" rel="noopener">resume</a></li>
                 </ul>
